// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-curly-component-invocation {{#heading size="1"}}Disallowed heading component{{/heading}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 61,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": true,
    "line": 1,
    "message": "You are using the component {{heading}} with curly component syntax. You should use <Heading> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['heading'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#heading size=\\"1\\"}}Disallowed heading component{{/heading}}",
  },
]
`;

exports[`no-curly-component-invocation {{#heading size="1"}}Disallowed heading component{{/heading}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 61,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": true,
    "line": 1,
    "message": "You are using the component {{heading}} with curly component syntax. You should use <Heading> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['heading'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#heading size=\\"1\\"}}Disallowed heading component{{/heading}}",
  },
]
`;

exports[`no-curly-component-invocation {{#heading size="1"}}Disallowed heading component{{/heading}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 61,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": true,
    "line": 1,
    "message": "You are using the component {{heading}} with curly component syntax. You should use <Heading> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['heading'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#heading size=\\"1\\"}}Disallowed heading component{{/heading}}",
  },
]
`;

exports[`no-curly-component-invocation {{#heading size="1"}}Disallowed heading component{{/heading}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 61,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": true,
    "line": 1,
    "message": "You are using the component {{heading}} with curly component syntax. You should use <Heading> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['heading'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#heading size=\\"1\\"}}Disallowed heading component{{/heading}}",
  },
]
`;

exports[`no-curly-component-invocation {{#heading size="1"}}Disallowed heading component{{/heading}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 61,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": true,
    "line": 1,
    "message": "You are using the component {{heading}} with curly component syntax. You should use <Heading> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['heading'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#heading size=\\"1\\"}}Disallowed heading component{{/heading}}",
  },
]
`;

exports[`no-curly-component-invocation {{#heading size="1"}}Disallowed heading component{{/heading}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 61,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": true,
    "line": 1,
    "message": "You are using the component {{heading}} with curly component syntax. You should use <Heading> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['heading'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#heading size=\\"1\\"}}Disallowed heading component{{/heading}}",
  },
]
`;

exports[`no-curly-component-invocation {{#link-to "foo"}}bar{{/link-to}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 33,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#link-to \\"foo\\"}}bar{{/link-to}}",
  },
]
`;

exports[`no-curly-component-invocation {{#link-to "foo"}}bar{{/link-to}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 33,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#link-to \\"foo\\"}}bar{{/link-to}}",
  },
]
`;

exports[`no-curly-component-invocation {{#link-to "foo"}}bar{{/link-to}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 33,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#link-to \\"foo\\"}}bar{{/link-to}}",
  },
]
`;

exports[`no-curly-component-invocation {{#link-to "foo"}}bar{{/link-to}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 33,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#link-to \\"foo\\"}}bar{{/link-to}}",
  },
]
`;

exports[`no-curly-component-invocation {{#link-to "foo"}}bar{{/link-to}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 33,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#link-to \\"foo\\"}}bar{{/link-to}}",
  },
]
`;

exports[`no-curly-component-invocation {{#link-to "foo"}}bar{{/link-to}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 33,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{#link-to \\"foo\\"}}bar{{/link-to}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo.bar bar=baz}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo.bar}} with curly component syntax. You should use <Foo.Bar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo.bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo.bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo.bar bar=baz}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo.bar}} with curly component syntax. You should use <Foo.Bar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo.bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo.bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo.bar bar=baz}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo.bar}} with curly component syntax. You should use <Foo.Bar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo.bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo.bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo.bar bar=baz}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo.bar}} with curly component syntax. You should use <Foo.Bar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo.bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo.bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo.bar bar=baz}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo.bar}} with curly component syntax. You should use <Foo.Bar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo.bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo.bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo.bar bar=baz}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo.bar}} with curly component syntax. You should use <Foo.Bar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo.bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo.bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar bar=baz}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar bar=baz}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar bar=baz}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar bar=baz}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar bar=baz}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar bar=baz}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 19,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar bar=baz}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 11,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 11,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 11,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 11,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 11,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar}}",
  },
]
`;

exports[`no-curly-component-invocation {{foo-bar}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 11,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{foo-bar}} with curly component syntax. You should use <FooBar> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['foo-bar'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{foo-bar}}",
  },
]
`;

exports[`no-curly-component-invocation {{input type="text" value=this.model.name}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 43,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{input}} with curly component syntax. You should use <Input> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['input'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{input type=\\"text\\" value=this.model.name}}",
  },
]
`;

exports[`no-curly-component-invocation {{input type="text" value=this.model.name}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 43,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{input}} with curly component syntax. You should use <Input> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['input'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{input type=\\"text\\" value=this.model.name}}",
  },
]
`;

exports[`no-curly-component-invocation {{input type="text" value=this.model.name}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 43,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{input}} with curly component syntax. You should use <Input> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['input'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{input type=\\"text\\" value=this.model.name}}",
  },
]
`;

exports[`no-curly-component-invocation {{input type="text" value=this.model.name}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 43,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{input}} with curly component syntax. You should use <Input> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['input'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{input type=\\"text\\" value=this.model.name}}",
  },
]
`;

exports[`no-curly-component-invocation {{input type="text" value=this.model.name}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 43,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{input}} with curly component syntax. You should use <Input> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['input'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{input type=\\"text\\" value=this.model.name}}",
  },
]
`;

exports[`no-curly-component-invocation {{input type="text" value=this.model.name}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 43,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{input}} with curly component syntax. You should use <Input> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['input'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{input type=\\"text\\" value=this.model.name}}",
  },
]
`;

exports[`no-curly-component-invocation {{link-to "bar" "foo"}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 23,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{link-to \\"bar\\" \\"foo\\"}}",
  },
]
`;

exports[`no-curly-component-invocation {{link-to "bar" "foo"}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 23,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{link-to \\"bar\\" \\"foo\\"}}",
  },
]
`;

exports[`no-curly-component-invocation {{link-to "bar" "foo"}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 23,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{link-to \\"bar\\" \\"foo\\"}}",
  },
]
`;

exports[`no-curly-component-invocation {{link-to "bar" "foo"}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 23,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{link-to \\"bar\\" \\"foo\\"}}",
  },
]
`;

exports[`no-curly-component-invocation {{link-to "bar" "foo"}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 23,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{link-to \\"bar\\" \\"foo\\"}}",
  },
]
`;

exports[`no-curly-component-invocation {{link-to "bar" "foo"}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 23,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{link-to}} with curly component syntax. You should use <LinkTo> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['link-to'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{link-to \\"bar\\" \\"foo\\"}}",
  },
]
`;

exports[`no-curly-component-invocation {{nested/component}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 20,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{nested/component}} with curly component syntax. You should use <Nested::Component> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['nested/component'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{nested/component}}",
  },
]
`;

exports[`no-curly-component-invocation {{nested/component}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 20,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{nested/component}} with curly component syntax. You should use <Nested::Component> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['nested/component'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{nested/component}}",
  },
]
`;

exports[`no-curly-component-invocation {{nested/component}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 20,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{nested/component}} with curly component syntax. You should use <Nested::Component> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['nested/component'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{nested/component}}",
  },
]
`;

exports[`no-curly-component-invocation {{nested/component}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 20,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{nested/component}} with curly component syntax. You should use <Nested::Component> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['nested/component'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{nested/component}}",
  },
]
`;

exports[`no-curly-component-invocation {{nested/component}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 20,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{nested/component}} with curly component syntax. You should use <Nested::Component> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['nested/component'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{nested/component}}",
  },
]
`;

exports[`no-curly-component-invocation {{nested/component}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 20,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{nested/component}} with curly component syntax. You should use <Nested::Component> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['nested/component'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{nested/component}}",
  },
]
`;

exports[`no-curly-component-invocation {{textarea value=this.model.body}}: logs errors 1`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 34,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{textarea}} with curly component syntax. You should use <Textarea> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['textarea'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{textarea value=this.model.body}}",
  },
]
`;

exports[`no-curly-component-invocation {{textarea value=this.model.body}}: logs errors 2`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 34,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{textarea}} with curly component syntax. You should use <Textarea> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['textarea'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{textarea value=this.model.body}}",
  },
]
`;

exports[`no-curly-component-invocation {{textarea value=this.model.body}}: logs errors 3`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 34,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{textarea}} with curly component syntax. You should use <Textarea> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['textarea'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{textarea value=this.model.body}}",
  },
]
`;

exports[`no-curly-component-invocation {{textarea value=this.model.body}}: logs errors 4`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 34,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{textarea}} with curly component syntax. You should use <Textarea> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['textarea'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{textarea value=this.model.body}}",
  },
]
`;

exports[`no-curly-component-invocation {{textarea value=this.model.body}}: logs errors 5`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 34,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{textarea}} with curly component syntax. You should use <Textarea> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['textarea'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{textarea value=this.model.body}}",
  },
]
`;

exports[`no-curly-component-invocation {{textarea value=this.model.body}}: logs errors 6`] = `
Array [
  Object {
    "column": 0,
    "endColumn": 34,
    "endLine": 1,
    "filePath": "layout.hbs",
    "isFixable": false,
    "line": 1,
    "message": "You are using the component {{textarea}} with curly component syntax. You should use <Textarea> instead. If it is actually a helper you must manually add it to the 'no-curly-component-invocation' rule configuration, e.g. \`'no-curly-component-invocation': { allow: ['textarea'] }\`.",
    "rule": "no-curly-component-invocation",
    "severity": 2,
    "source": "{{textarea value=this.model.body}}",
  },
]
`;
